--- a/style.css
+++ b/style.css
@@ -27,12 +27,12 @@ float: left;
 margin-top: 10px;
 }
 
-ul{
+nav{
 floats: right;
 line-height: 70px;
 }
 
-ul li{
+nav li{
 display: block
 display: inline-block;
 padding: 5px 20px;
