--- a/style.css
+++ b/style.css
@@ -27,12 +27,12 @@ float: left;
 margin-top: 10px;
 }
 
-nav{
+ul{
 floats: right;
 line-height: 70px;
 }
 
-nav li{
+ul li{
 display: block
 display: inline-block;
 padding: 5px 20px;
