--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ line-height: normal;
 }
 
 .content h2{
-background: #ff4719;
+background: #4d79ff;
 padding: 10px;
 border-radius: Spx;
 margin-botton: 20px;
