--- a/style.css
+++ b/style.css
@@ -54,11 +54,11 @@ width: 600px;
 
 .face {
   width: 300px;
-  padding-left: 100px
+  padding-left: 100px;
 }
 
 .job {
-  width: 500px;
-  padding-left: 100px
-  padding-top: 100px
+  width: 400px;
+  padding-left: 100px;
+  padding-top: 100px;
 }
