--- a/style.css
+++ b/style.css
@@ -62,3 +62,9 @@ width: 600px;
   padding-left: 100px;
   padding-top: 50px;
 }
+
+.personal {
+  width: 200px;
+  padding-left: 100px;
+  padding-top: 50px;
+}
